# bitcoin-nostr-relay

./: Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md
examples/: configuration_example.rs
src/: bitcoin_rpc.rs  error.rs  lib.rs  networks.rs  nostr.rs  relay.rs  validation.rs
src/relay/: config.rs  server.rs
tests/: integration_tests.rs
