[package]
name = "tx-relay"
version = "0.1.0"
edition = "2021"
description = "A library for relaying Bitcoin transactions over the Nostr protocol"
license = "MIT"
repository = "https://github.com/vnprc/tx-relay"
keywords = ["bitcoin", "nostr", "relay", "transaction", "blockchain"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.4"
hex = "0.4"
sha2 = "0.10"
secp256k1 = "0.28"
bitcoin = "0.30"
anyhow = "1.0"
thiserror = "1.0"
lru = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
nostr = "0.25"
